--- a/player.css
+++ b/player.css
@@ -117,3 +117,209 @@ nav {
   width: 35px;
   border-radius: 50%;
 }
+
+/*** video player ***/
+.container {
+  display: flex;
+}
+.left {
+  width: 65vw;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 5px;
+  margin: 20px;
+  color: white;
+}
+
+#video-player {
+  border-radius: 15px;
+  width: 90%;
+  background-color: rgb(142, 56, 222);
+  margin: auto;
+  text-align: center;
+  box-shadow: 0 0 100px 30px rgba(255, 255, 255, 0.2);
+}
+.title {
+  font-weight: 600;
+}
+.channel {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.description {
+  padding: 10px;
+  background-color: #272727;
+  min-height: 25vh;
+}
+.comments {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+.commentBox {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  background-color: black;
+  color: white;
+  padding: 15px;
+  border-radius: 15px;
+}
+.profile > img {
+  border-radius: 50%;
+}
+.like,
+.dislike {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+}
+.likeBtn {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  border-radius: 50%;
+  user-select: none;
+  border-radius: 15px;
+}
+.likeBtn:hover {
+  background-color: #272727;
+}
+.replyText {
+  user-select: none;
+  border-radius: 15px;
+  width: fit-content;
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 12px;
+}
+.replyText:hover {
+  background-color: #272727;
+}
+.likedislike {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+.comment {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* Right */
+.right {
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 25px;
+  margin: 20px;
+  border-radius: 10px;
+  /* background-color: #272727; */
+  color: white;
+}
+/* Right */
+.details {
+  display: flex;
+}
+.videoDetails {
+  display: flex;
+  padding-left: 15px;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.videos {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  gap: 20px;
+}
+.video {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  flex: 1;
+}
+.titleText {
+  font-weight: 600;
+  font-size: 14px;
+}
+p {
+  padding: 5px;
+}
+.time {
+  color: rgb(152, 152, 152);
+}
+.channelName {
+  color: rgb(152, 152, 152);
+}
+.duration {
+  position: absolute;
+  right: 5px;
+  bottom: 7px;
+  width: fit-content;
+  height: fit-content;
+  padding: 2px 4px;
+  color: white;
+  background-color: black;
+}
+.thumbnail {
+  position: relative;
+  width: 100%;
+}
+.thumbnailImg {
+  border-radius: 10px;
+  width: 100%;
+  /*height:225px; */
+  object-fit: cover;
+}
+.title {
+  display: flex;
+  align-items: center;
+}
+.account {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: purple;
+  text-align: center;
+  padding: 10px;
+}
+.profile > img {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+}
+
+.titleText {
+  padding: 5px;
+}
+
+/* Description */
+
+.stats {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 5px;
+}
+.title {
+  font-size: 20px;
+}
+.btns {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  padding: 10px;
+}
+.channelProfile > img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+.description {
+  padding: 15px;
+  border-radius: 10px;
+}
