--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Inter:wght@200;300;400;500;600;700&family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@200;300;400;600&family=Roboto:wght@300;400;500;700;900&display=swap");
+
+:root {
+  --nav-background-color: black;
+  --background-color: black;
+  --text-color: white;
+}
+
+body.dark-theme {
+  --nav-background-color: rgb(83, 78, 78);
+  --background-color: white;
+  --text-color: black;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +20,7 @@
   outline: none;
   border: none;
 }
+
 .logo {
   height: 1.3rem;
   margin-left: 2rem;
@@ -15,8 +29,10 @@ iframe {
   pointer-events: none;
 }
 body {
-  background-color: rgb(15, 15, 15);
-  color: white;
+  /* background-color: rgb(15, 15, 15);
+  color: white; */
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 nav {
   height: 3rem;
@@ -29,8 +45,9 @@ nav {
   position: sticky;
   top: 0;
   right: 0;
-  background-color: rgb(15, 15, 15);
-  z-index: 2;
+  /* background-color: rgb(15, 15, 15); */
+  background-color: var(--nav-background-color);
+  z-index: 100;
 }
 #menuIcon {
   position: absolute;
@@ -40,7 +57,8 @@ nav {
 .line {
   width: 100%;
   height: 1px;
-  background-color: rgba(84, 84, 84, 0.557);
+  /* background-color: rgba(84, 84, 84, 0.557); */
+  background-color: var(--background-color);
   padding: 0 !important;
 }
 .main {
@@ -90,6 +108,7 @@ nav {
 }
 .home {
   background-color: rgba(128, 128, 128, 0.342);
+  background-color: var(--background-color);
 }
 
 .inputDiv {
@@ -99,23 +118,50 @@ nav {
   border: 1px solid rgba(255, 255, 255, 0.199);
   border-radius: 18px;
   overflow: hidden;
+  position: relative;
 }
 .inputDiv > input {
   width: 6rem;
   flex: 1;
-  background-color: rgb(15, 15, 15);
-  color: white;
+  /* background-color: rgb(15, 15, 15); */
+  /* color: white; */
+  background-color: var(--background-color);
+  color: var(--text-color);
   font-size: 1rem;
   padding: 10px 20px;
 }
 .searchBtn {
-  background-color: #222222;
+  /* background-color: #222222; */
+  background-color: var(--background-color);
   padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
+.suggestions {
+  position: absolute;
+  top: 100%;
+  background-color: yellow;
+  color: black;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 2px solid red;
+  border-radius: 0 0 18px 18px;
+  z-index: 10;
+  display: none;
+}
+
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.suggestion-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 nav span {
   color: white;
 }
